--- a/addons/aabaan_service_scheduler/static/src/supervisor_command_centre/supervisor_command_centre.scss
+++ b/addons/aabaan_service_scheduler/static/src/supervisor_command_centre/supervisor_command_centre.scss
@@ -9,7 +9,7 @@
     --sc-warning: #d9a300;
     --sc-ok: #2e8b57;
 
-    min-height: 100%;
+    height: 100%;
     background: var(--sc-bg);
     color: var(--sc-ink);
     padding: 24px 40px 48px;
