--- a/addons/fm_dashboards/static/src/exec_dashboard/exec_dashboard.scss
+++ b/addons/fm_dashboards/static/src/exec_dashboard/exec_dashboard.scss
@@ -1,5 +1,5 @@
 .o_fm_exec {
-    min-height: 100%;
+    height: 100%;
     background: var(--fm-bg-page, #FAFAF7);
     color: var(--fm-ink-900, #1A1A1A);
     padding: 24px 40px 48px;
