--- a/addons/fm_reports/static/src/reports_hub/reports_hub.scss
+++ b/addons/fm_reports/static/src/reports_hub/reports_hub.scss
@@ -1,5 +1,5 @@
 .o_fm_reports {
-    min-height: 100%;
+    height: 100%;
     background: var(--fm-bg-page, #FAFAF7);
     color: var(--fm-ink-900, #1A1A1A);
     padding: 28px 40px 48px;
